<resources>
    <string name="app_name">MyStaff</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="sign_in_failed_wrong_password_or_username">Sign in failed! Wrong password or username</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">CREATE AN ACCOUNT</string>
    <string name="all_done">All done!!!\n You can update your Profile Photo on your profle</string>


</resources>
